# motionx

./: .gitignore  helper.txt
deployments/: docker-compose.yml
services/django-auth/: db.sqlite3  pyproject.toml  pytest.ini
services/django-auth/GroupApp/: utils.py
services/django-auth/UserApp/: models.py  urls.py  views.py
services/django-auth/UserApp/migrations/: 0001_initial.py  0002_user_user_name.py  0003_remove_user_is_staff_alter_user_is_active.py  0004_useractivetoken_userpasswordresettoken.py
services/django-auth/app/: settings.py
services/django-auth/test_results/20260206_052210/: api_test_results.json
services/django-auth/test_results/20260206_052210/excel_reports/: api_test_results.csv  api_test_results.xlsx
services/django-auth/tests/: conftest.py  test-helper-command.txt  test_user_apis.py
